# FalcomChain

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: algorithm.md  conf.py  falcomchain_workflow.xml  geodataframe.md  getting_started.md  index.md  roadmap.md  schema.md  structure.md
docs/_sphinx/: conf.py  index.md
docs/_sphinx/api/: falcomchain.rst
docs/tutorials/: 01_quickstart.ipynb
falcomchain/: __init__.py  random.py
falcomchain/candidates/: OD-data.ipynb  notebook.ipynb
falcomchain/constraints/: contiguity.py
falcomchain/graph/: __init__.py  graph.py  grid.py  schema.py
falcomchain/helper/: prep.ipynb  test.ipynb
falcomchain/markovchain/: __init__.py  accept.py  chain.py  energy.py  facility.py  optimization.py  proposals.py  state.py
falcomchain/partition/: __init__.py  assignment.py  flows.py  partition.py
falcomchain/tally/: tally.py
falcomchain/tree/: __init__.py  snapshot.py  tree.ipynb  tree.py
rjavaenv/macos/aarch64/: 21
tests/: conftest.py  stree.pkl  test_markovchain.py  test_pipeline.py  test_tree.py  tree.ipynb
tests/graph/: test_graph.py
tests/helper/: test_data_handler.py
tests/test_data/: demo_grid_10x10.pkl  demo_partition_10x10.json  test_grid_6x5.pkl
